Mass content upgrade: 65+ pages expanded to premium quality

--- a/pages/egzersiz/kuvvet-antrenman.html
+++ b/pages/egzersiz/kuvvet-antrenman.html
@@ -286,6 +286,35 @@
  <li>Antrenman günlüğü tutuyorum</li>
  </ul>
 
+ <h2>Bu Konu Kilo Yönetimiyle Nasıl Bağlantılı?</h2>
+ <p>Kuvvet antrenmanı, kilo yönetiminde kardiodan bile daha kritik bir rol oynar. İşte nedeni:</p>
+ <ul>
+ <li><strong>Metabolizma hızlandırma:</strong> Her 1 kg kas kütlesi, günlük bazal metabolizmanıza yaklaşık 13 kalori ekler. 5 kg kas kazanımı, yılda yaklaşık 24.000 ekstra kalori yakımı demektir — hiçbir şey yapmadan</li>
+ <li><strong>Afterburn etkisi (EPOC):</strong> Yoğun kuvvet antrenmanı sonrası metabolizma 24-72 saat boyunca yüksek kalır</li>
+ <li><strong>Vücut kompozisyonu:</strong> Kuvvet antrenmanı yağ kaybederken kas kütlesini korur. Sadece diyet veya kardio ile kilo verenler kas da kaybeder — bu metabolizmayı yavaşlatır</li>
+ <li><strong>İnsülin duyarlılığı:</strong> Kas dokusu, vücudun en büyük glikoz deposudur. Daha fazla kas = daha iyi kan şekeri kontrolü = daha az yağ depolama</li>
+ <li><strong>Hormon optimizasyonu:</strong> Kuvvet antrenmanı, büyüme hormonu ve testosteronu artırır — her ikisi de yağ yakımını destekler</li>
+ <li><strong>Yoyo etkisi önleme:</strong> Kas kütlesini koruyarak kilo verdiğinizde, geri alma olasılığınız çok daha düşük olur</li>
+ </ul>
+ <p><strong>Kilo vermek istiyorsanız:</strong> Sadece kardio yapmayın. Haftada en az 2-3 gün kuvvet antrenmanı ekleyin. Bu, vücut kompozisyonunuzu (yağ/kas oranını) iyileştirir ve uzun vadede sağlıklı kilonuzu korumanızı sağlar.</p>
+
+ <h2>Sık Sorulan Sorular</h2>
+
+ <h3>Kaç yaşında kuvvet antrenmanına başlanabilir?</h3>
+ <p>Her yaşta başlanabilir. Ergenler uygun gözetim altında vücut ağırlığı ve hafif ağırlıklarla güvenle çalışabilir. 60-70 yaşında başlayanlar bile kas gücünde %30-50 artış sağlayabilir. Asla "çok geç" değildir.</p>
+
+ <h3>Kuvvet antrenmanı boyumu kısaltır mı?</h3>
+ <p>Hayır, bu bir efsanedir. Doğru formda yapılan kuvvet antrenmanı boy kısaltmaz. Aksine, omurga sağlığını koruyarak postürü iyileştirir ve yaşla birlikte boy kaybını yavaşlatır.</p>
+
+ <h3>Ne kadar sürede sonuç görürüm?</h3>
+ <p>Güç artışı ilk 2-4 haftada hissedilir (nöral adaptasyon). Görünür kas değişiklikleri 8-12 hafta sonra belirginleşir. Sabırlı olun ve tutarlı kalın — en iyi sonuçlar 6-12 ayda gelir.</p>
+
+ <h3>Evde mi salonda mı başlamalıyım?</h3>
+ <p>Hiç deneyiminiz yoksa evde vücut ağırlığı egzersizleriyle başlayabilirsiniz. Ancak 4-8 hafta sonra ilerleme için ağırlıklara ihtiyaç duyacaksınız. İdeal: 1-2 seans profesyonel eğitmenle form öğrenin, sonra kendi başınıza devam edin.</p>
+
+ <h3>Protein tozu almam gerekiyor mu?</h3>
+ <p>Zorunlu değildir. Protein ihtiyacınızı normal gıdalardan (yumurta, tavuk, balık, süt ürünleri, baklagiller) karşılayabilirsiniz. Ancak günlük 1.6-2.2 g/kg proteini yemeklerden almakta zorlanıyorsanız, protein tozu pratik bir ektir — lüks değil, gereksinim durumunda araçtır.</p>
+
  <div class="sources">
  <h4> Kaynaklar ve Referanslar</h4>
  <ol>
