--- a/pages/stres/kronik-stres.html
+++ b/pages/stres/kronik-stres.html
@@ -316,6 +316,29 @@
  <p><strong>Kriz hattı:</strong> 182 (Alo Psikiyatri Hattı) — 7/24 ücretsiz destek.</p>
  </div>
 
+ <h2>Bu Konu Kilo Yönetimiyle Nasıl Bağlantılı?</h2>
+ <p>Kronik stres, kilo yönetiminin en büyük düşmanlarından biridir. Mekanizmalar:</p>
+ <ul>
+ <li><strong>Kortizol ve viseral yağ:</strong> Kronik yüksek kortizol, yağın özellikle karın bölgesinde depolanmasını sağlar. "Stres göbeği" gerçek bir fizyolojik olgudur</li>
+ <li><strong>Duygusal yeme:</strong> Stres, beynin ödül merkezini aktive eder ve yüksek kalorili yiyeceklere yönelimi %35 artırır</li>
+ <li><strong>İnsülin direnci:</strong> Kronik stres, insülin duyarlılığını bozar — aynı kalori alımıyla daha fazla yağ depolarsınız</li>
+ <li><strong>Uyku bozulması:</strong> Stres uyku kalitesini düşürür, bu da iştah hormonlarını bozar</li>
+ <li><strong>Egzersiz motivasyonu:</strong> Tükenmişlik ve kronik yorgunluk, egzersiz yapma isteğini ve kapasitesini düşürür</li>
+ <li><strong>Bağırsak mikrobiyomu:</strong> Stres, bağırsak florasını bozar — bu da metabolizmayı ve iştahı olumsuz etkiler</li>
+ </ul>
+ <p><strong>Kilit mesaj:</strong> Kilo vermek istiyorsanız ama kronik stres yaşıyorsanız, önce stresi ele alın. Stres altındayken en iyi diyet ve egzersiz programları bile tam etkili olamaz. Stres yönetimi, kilo yönetiminin ön koşuludur.</p>
+
+ <h2>Sık Sorulan Sorular</h2>
+
+ <h3>Kronik stres ve depresyon aynı şey mi?</h3>
+ <p>Hayır, ama ilişkilidirler. Kronik stres, depresyonun en güçlü risk faktörlerinden biridir. Stres bir tepki durumuyken, depresyon klinik bir bozukluktur. 2 haftadan uzun süren umutsuzluk, ilgi kaybı ve günlük işlevsellik bozulması varsa depresyon değerlendirmesi yapılmalıdır.</p>
+
+ <h3>Stresi tamamen ortadan kaldırabilir miyim?</h3>
+ <p>Hayır, ve kaldırmamalısınız. Akut stres faydalıdır — sizi motive eder ve performansınızı artırır. Hedef stressiz yaşam değil, stresle sağlıklı başa çıkma becerileri geliştirmektir.</p>
+
+ <h3>Ashwagandha gerçekten işe yarıyor mu?</h3>
+ <p>Bazı randomize kontrollü çalışmalar, ashwagandha'nın (300-600mg/gün) kortizolü %30'a kadar düşürdüğünü göstermiştir. Ancak kanıt düzeyi henüz güçlü değildir ve uzun vadeli güvenlik verisi sınırlıdır. Doktorunuza danışmadan kullanmayın, özellikle tiroid ilacı alıyorsanız.</p>
+
  <div class="guide-cta">
  <h3>Stres seviyenizi ölçün</h3>
  <p>Kişisel değerlendirmenizle stres profilinizi öğrenin ve öneriler alın.</p>
