--- a/pages/stres/meditasyon-mindfulness.html
+++ b/pages/stres/meditasyon-mindfulness.html
@@ -281,6 +281,18 @@
  <h3>Yatarak meditasyon yapabilir miyim?</h3>
  <p>Evet, özellikle beden taraması için idealdir. Ancak uykuya dalma riskiniz yüksekse, oturarak pratiğe öncelik verin.</p>
 
+ <h2>Bu Konu Kilo Yönetimiyle Nasıl Bağlantılı?</h2>
+ <p>Meditasyon ve mindfulness, kilo yönetimini birçok mekanizma üzerinden destekler:</p>
+ <ul>
+ <li><strong>Kortizol düşüşü:</strong> Düzenli meditasyon, stres hormonu kortizolü %23 düşürür. Yüksek kortizol, karın bölgesinde yağ depolanmasını artırır</li>
+ <li><strong>Mindful yeme:</strong> Farkındalıkla yemek yemek, aşırı yeme davranışını %40'a kadar azaltır. Yemeği yavaşlatmak, tokluk sinyallerinin beyine ulaşmasına zaman tanır</li>
+ <li><strong>Duygusal yeme kontrolü:</strong> Meditasyon, duygusal tetikleyicileri tanıma becerisini geliştirir — "Gerçekten aç mıyım yoksa stresli miyim?" sorusunu sorabilme kapasitesi artar</li>
+ <li><strong>İmpuls kontrolü:</strong> Prefrontal korteks güçlenmesi, anlık dürtülere (tatlı isteği, abur cubur) direnme kapasitesini artırır</li>
+ <li><strong>Uyku kalitesi:</strong> Meditasyon, uyku kalitesini artırır. Kaliteli uyku, iştah hormonlarını düzenler</li>
+ <li><strong>Bağırsak-beyin ekseni:</strong> Stres azaltma, bağırsak mikrobiyomunu iyileştirir — bu da metabolizmayı ve iştahı olumlu etkiler</li>
+ </ul>
+ <p>Kilo vermek istiyorsanız, günlük 10-15 dakikalık meditasyon pratiği eklemek, beslenme ve egzersiz planınızın etkinliğini artıracaktır.</p>
+
  <div class="guide-cta">
  <h3>Stres profilinizi öğrenin</h3>
  <p>Kişiselleştirilmiş meditasyon ve stres yönetimi önerileri alın.</p>
