--- a/pages/stres/nefes-teknikleri.html
+++ b/pages/stres/nefes-teknikleri.html
@@ -266,6 +266,30 @@
  <li><strong>Bağışıklık:</strong> Kontrollü nefes pratikleri, inflamatuar sitokinleri azaltarak bağışıklık yanıtını düzenliyor (Kox et al., 2014).</li>
  </ul>
 
+ <h2>Bu Konu Kilo Yönetimiyle Nasıl Bağlantılı?</h2>
+ <p>Nefes teknikleri, stres yönetimi üzerinden kilo kontrolünü dolaylı ama güçlü bir şekilde destekler:</p>
+ <ul>
+ <li><strong>Kortizol düşüşü:</strong> Yapılandırılmış nefes egzersizleri, kortizolü %23 düşürür. Yüksek kortizol, viseral yağ birikiminin ana tetikleyicisidir</li>
+ <li><strong>Vagus siniri ve sindirim:</strong> Parasempatik aktivasyon, sindirim sistemini optimize eder. "Savaş ya da kaç" modunda sindirim baskılanır — bu da şişkinlik, kabızlık ve besin emilim sorunlarına yol açar</li>
+ <li><strong>Duygusal yeme kontrolü:</strong> Stres anında yemek yerine 3-5 nefes döngüsü yapmak, anlık dürtüyü kırar. Fizyolojik iç çekme, acil bir "durdurma" mekanizması olarak kullanılabilir</li>
+ <li><strong>Uyku kalitesi:</strong> Yatmadan önce nefes pratiği, uyku kalitesini artırır. Kaliteli uyku, iştah hormonlarını düzenler</li>
+ <li><strong>Egzersiz performansı:</strong> Doğru nefes tekniği, egzersiz kapasitesini artırır — daha etkili antrenman = daha fazla kalori yakımı</li>
+ </ul>
+
+ <h2>Sık Sorulan Sorular</h2>
+
+ <h3>Nefes egzersizi sırasında baş dönmesi normal mi?</h3>
+ <p>Başlangıçta hafif baş dönmesi yaşanabilir, özellikle nefes tutma gerektiren tekniklerde. Bu genellikle hiperventilasyondan kaynaklanır. Tutma sürelerini kısaltarak başlayın ve yavaşça artırın. Şiddetli baş dönmesi veya bayılma hissi olursa egzersizi durdurun.</p>
+
+ <h3>Panik atak sırasında hangi tekniği kullanmalıyım?</h3>
+ <p>Fizyolojik iç çekme (çift nefes alış + uzun verme) en hızlı etkilidir. Kutu nefesi de etkilidir. 4-7-8 tekniği panik atak sırasında zor olabilir çünkü uzun nefes tutma kaygıyı artırabilir. Panik atak sırasında "yavaş nefes ver" odaklı olun.</p>
+
+ <h3>Günde kaç dakika nefes egzersizi yapmalıyım?</h3>
+ <p>Günde toplam 10-15 dakika yeterlidir. Bu, sabah 5 dakika + akşam 5 dakika şeklinde bölünebilir. Araştırmalar, günde 5 dakikanın bile ölçülebilir fayda sağladığını göstermektedir.</p>
+
+ <h3>Nefes teknikleri ilaç tedavisinin yerini alabilir mi?</h3>
+ <p>Hayır. Nefes teknikleri güçlü bir tamamlayıcı araçtır ama psikiyatrik ilaç tedavisinin yerine geçmez. İlaç kullananlar, nefes tekniklerini ek destek olarak kullanabilir — ancak ilaç değişikliklerini asla kendi başınıza yapmayın.</p>
+
  <div class="guide-cta">
  <h3>Stres seviyenizi değerlendirin</h3>
  <p>Kişisel sağlık profili oluşturarak stres yönetimi önerileri alın.</p>
