--- a/pages/uyku/ruya-ve-uyku-evreleri.html
+++ b/pages/uyku/ruya-ve-uyku-evreleri.html
@@ -325,6 +325,16 @@
  <h3>Uyurgezerlik hangi evrede olur?</h3>
  <p>Uyurgezerlik (somnambulizm), derin uyku evresinde (N3) ortaya çıkar — genellikle gecenin ilk üçte birinde. REM uykusunda değil, NREM'de gerçekleşir. Bu nedenle uyurgezerler genellikle olay sırasında rüya görmediklerini bildirirler.</p>
 
+ <h2>Bu Konu Kilo Yönetimiyle Nasıl Bağlantılı?</h2>
+ <p>Uyku evreleri, kilo yönetimini doğrudan etkileyen hormonal ve metabolik süreçleri yönetir:</p>
+ <ul>
+ <li><strong>Derin uyku ve büyüme hormonu:</strong> N3 evresinde salgılanan büyüme hormonu, yağ yakımını destekler ve kas onarımını sağlar. Yetersiz derin uyku, yağ depolanmasını artırır</li>
+ <li><strong>REM ve duygusal yeme:</strong> REM uykusu eksikliği duygusal düzenlemeyi bozar — stres yemesine yönelim artar</li>
+ <li><strong>Uyku mimarisinin bozulması:</strong> Alkol, geç yemek ve ekran ışığı uyku evrelerinin dengeli dağılımını bozar. Bu da metabolik hormonları olumsuz etkiler</li>
+ <li><strong>Ghrelin ve leptin:</strong> Kısa uyku süresi (6 saatten az), açlık hormonu ghrelin'i artırır ve tokluk hormonu leptin'i düşürür</li>
+ </ul>
+ <p>Kaliteli uyku evreleri (yeterli derin uyku + yeterli REM) için 7-9 saat uyumak, kilo yönetimini destekleyen en basit ama en güçlü adımlardan biridir.</p>
+
  <div class="sources">
  <h4> Kaynaklar ve Referanslar</h4>
  <ol>
