--- a/pages/uyku/sirkadiyen-ritim.html
+++ b/pages/uyku/sirkadiyen-ritim.html
@@ -277,6 +277,28 @@
  <p>Hafta içi ve hafta sonu uyku saatleri arasındaki fark "sosyal jet lag" olarak adlandırılır. Till Roenneberg'in araştırmalarına göre, 2+ saat sosyal jet lag'ı olan kişilerde obezite riski %33, depresyon riski %40 daha yüksektir. Hafta sonları bile saatinizi 1 saatten fazla kaydırmamaya çalışın.</p>
  </div>
 
+ <h2>Bu Konu Kilo Yönetimiyle Nasıl Bağlantılı?</h2>
+ <p>Sirkadiyen ritim bozulması, kilo artışının en az bilinen ama en güçlü tetikleyicilerinden biridir:</p>
+ <ul>
+ <li><strong>Geç yemek:</strong> Aynı kalori, gece yendiğinde sabah yendiğine göre daha fazla yağ depolanmasına yol açar. İnsülin duyarlılığı akşam doğal olarak düşer</li>
+ <li><strong>Sosyal jet lag ve obezite:</strong> 2+ saat sosyal jet lag'ı olan kişilerde obezite riski %33 daha yüksek (Roenneberg ve ark., 2012)</li>
+ <li><strong>Vardiyalı çalışma:</strong> Gece vardiyası çalışanları, gündüz çalışanlara göre ortalama 5-8 kg daha ağır</li>
+ <li><strong>Zaman kısıtlamalı beslenme:</strong> Yemekleri 8-10 saatlik pencereye sığdırmak, aynı kaloriye rağmen kilo kaybını kolaylaştırır</li>
+ <li><strong>Sabah güneş ışığı:</strong> Sabah ışığı alan kişilerin BMI'si, almayanlara göre daha düşük (Reid ve ark., 2014)</li>
+ </ul>
+ <p><strong>Pratik öneri:</strong> Son öğününüzü yatmadan en az 3 saat önce tamamlayın. Kalorinin büyük kısmını günün ilk yarısında alın. Düzenli uyku saatleri tutun. Bu basit adımlar, aynı kalori alımıyla bile kilo vermenizi kolaylaştırır.</p>
+
+ <h2>Sık Sorulan Sorular</h2>
+
+ <h3>Kronotipimi değiştirebilir miyim?</h3>
+ <p>Genetik kronotipi tamamen değiştiremezsiniz, ancak ışık, yemek zamanlaması ve egzersizle 1-2 saat kaydırabilirsiniz. Sabah güneş ışığı ve erken egzersiz, ritmi öne çekmeye yardımcı olur.</p>
+
+ <h3>Melatonin takviyesi güvenli mi?</h3>
+ <p>Kısa süreli kullanımda (jet lag, vardiyalı çalışma) genellikle güvenlidir. Düşük doz (0.5-1mg) tercih edin. Uzun süreli kullanım için yeterli veri yok — doktorunuza danışın.</p>
+
+ <h3>Vardiyalı çalışıyorum, sağlığımı nasıl koruyabilirim?</h3>
+ <p>Tutarlı vardiyada kalın (sık rotasyondan kaçının), uyku ortamınızı optimize edin (karanlık, sessiz, serin), stratejik kestirmeler yapın ve düzenli egzersiz alışkanlığını sürdürün. Beslenme düzeninizi mümkün olduğunca düzenli tutun.</p>
+
  <div class="sources">
  <h4> Kaynaklar ve Referanslar</h4>
  <ol>
