--- a/pages/uyku/uyku-bozukluklari.html
+++ b/pages/uyku/uyku-bozukluklari.html
@@ -309,6 +309,27 @@
  <p>2 hafta boyunca her gün kaydedin: Yatma saati, uykuya dalma süresi, gece uyanma sayısı, kalkma saati, gündüz enerji seviyesi, kafein/alkol tüketimi. Bu günlük doktorunuzun tanı koymasına büyük yardımcı olacaktır.</p>
  </div>
 
+ <h2>Bu Konu Kilo Yönetimiyle Nasıl Bağlantılı?</h2>
+ <p>Uyku bozuklukları ve kilo yönetimi arasında güçlü bir çift yönlü ilişki vardır:</p>
+ <ul>
+ <li><strong>Uyku apnesi ve obezite:</strong> Fazla kilo, uyku apnesinin en büyük risk faktörüdür. Uyku apnesi ise metabolizmayı bozarak kilo vermeyi zorlaştırır — bir kısır döngü. %10 kilo kaybı, apne şiddetini %50 azaltabilir</li>
+ <li><strong>İnsomni ve iştah:</strong> Kronik uykusuzluk, açlık hormonlarını bozar ve ertesi gün ortalama 300-400 ekstra kalori alımına yol açar</li>
+ <li><strong>Huzursuz bacak ve hareketsizlik:</strong> HBS'nin yarattığı gece uykusuzluğu, gündüz yorgunluk ve hareketsizliğe neden olur</li>
+ <li><strong>İlaçlar ve kilo:</strong> Bazı uyku ilaçları (özellikle bazı antidepresanlar) kilo artışına neden olabilir — doktorunuzla alternatifler konuşun</li>
+ </ul>
+ <p><strong>Kilit mesaj:</strong> Uyku bozukluğunuz varsa ve kilo vermekte zorlanıyorsanız, önce uyku sorununu çözün. Uyku kalitesi düzeldiğinde diyet ve egzersiz çok daha etkili hale gelir.</p>
+
+ <h2>Sık Sorulan Sorular</h2>
+
+ <h3>Horlamak her zaman uyku apnesi mi demektir?</h3>
+ <p>Hayır. Herkes horlayabilir (özellikle sırt üstü yatarken veya alkol sonrası). Ancak çok yüksek, düzensiz horlama ve nefes durması gözleniyorsa, uyku apnesi olasılığı yüksektir. Partnerinizin gözlemi çok değerlidir.</p>
+
+ <h3>Uyku ilacı bağımlılık yapar mı?</h3>
+ <p>Bazı uyku ilaçları (özellikle benzodiazepinler) bağımlılık yapabilir. Bu nedenle kısa süreli ve doktor gözetiminde kullanılmalıdır. CBT-I (Bilişsel Davranışçı Terapi) uzun vadede ilaçlardan daha etkili ve güvenlidir.</p>
+
+ <h3>Çocuğum uyurgezer, endişelenmeli miyim?</h3>
+ <p>Çocuklarda uyurgezerlik genellikle zararsızdır ve ergenlikte kendiliğinden geçer. Güvenlik önlemleri alın (merdiven kapısı, pencere kilidi) ve çocuğu uyurgezerlik sırasında uyandırmaya çalışmak yerine yavaşça yatağına yönlendirin.</p>
+
  <div class="sources">
  <h4> Kaynaklar ve Referanslar</h4>
  <ol>
