--- a/pages/uyku/uyku-hijyeni.html
+++ b/pages/uyku/uyku-hijyeni.html
@@ -261,6 +261,32 @@
  <p>Tüm değişiklikleri bir anda yapmaya çalışmayın. Her hafta 1-2 yeni alışkanlık ekleyin. Araştırmalar, küçük ve tutarlı değişikliklerin kalıcı olma olasılığının daha yüksek olduğunu gösteriyor.</p>
  </div>
 
+ <h2>Bu Konu Kilo Yönetimiyle Nasıl Bağlantılı?</h2>
+ <p>Uyku hijyeni, kilo yönetiminin en hafife alınan ama en güçlü bileşenlerinden biridir:</p>
+ <ul>
+ <li><strong>İştah hormonları:</strong> Yetersiz uyku, açlık hormonu ghrelin'i %28 artırır ve tokluk hormonu leptin'i %18 düşürür (Spiegel ve ark., 2004). Sonuç: ertesi gün ortalama 385 ekstra kalori alırsınız</li>
+ <li><strong>Karar verme:</strong> Uyku yoksunluğu prefrontal korteksi zayıflatır — yüksek kalorili yiyeceklere karşı direnciniz düşer</li>
+ <li><strong>İnsülin direnci:</strong> Tek bir gece kötü uyku bile insülin duyarlılığını %25-30 azaltabilir</li>
+ <li><strong>Kortizol yükselişi:</strong> Yetersiz uyku, akşam kortizol seviyelerini yüksek tutar — viseral yağ depolanması artar</li>
+ <li><strong>Egzersiz motivasyonu:</strong> Kötü uyku, ertesi gün egzersiz yapma olasılığını %50 azaltır</li>
+ <li><strong>Kas onarımı:</strong> Büyüme hormonu uyku sırasında salgılanır — yetersiz uyku kas gelişimini ve toparlanmayı engeller</li>
+ </ul>
+ <p>Araştırmalar, aynı diyeti uygulayan kişilerden iyi uyuyanların kötü uyuyanlara göre <strong>%55 daha fazla yağ</strong> kaybettiğini göstermektedir (Nedeltcheva ve ark., 2010). Uyku hijyenini düzeltmek, beslenme ve egzersiz kadar önemli bir kilo yönetimi stratejisidir.</p>
+
+ <h2>Sık Sorulan Sorular</h2>
+
+ <h3>Haftada kaç saat uyumalıyım?</h3>
+ <p>Yetişkinler için önerilen 7-9 saat/gece. Bazı kişiler 7 saatle iyi hissederken, bazıları 9 saate ihtiyaç duyar. "5-6 saat yeter" diyen kişilerin %99'u aslında kronik uyku borcu yaşıyor — alışmış olmaları yeterli olduğu anlamına gelmez.</p>
+
+ <h3>Hafta sonları fazla uyuyarak uyku borcumu kapatabilir miyim?</h3>
+ <p>Kısmen evet, ama ideal değildir. Hafta sonu fazla uyumak "sosyal jet lag" yaratır ve pazartesi performansını düşürür. En iyisi hafta boyunca tutarlı uyku saatleri belirlemektir. Hafta sonu farkı 1 saatten fazla olmamalı.</p>
+
+ <h3>Uyku ilacı kullanmalı mıyım?</h3>
+ <p>Uyku ilaçları kısa süreli ve doktor gözetiminde kullanılabilir, ancak uzun vadeli çözüm değildir. CBT-I (Bilişsel Davranışçı Terapi - İnsomni) ilaçlardan daha etkili ve kalıcıdır. Bitkisel seçenekler (valerian, melatonin) daha güvenli olabilir ama doktorunuza danışın.</p>
+
+ <h3>Gece sık uyanıyorum, ne yapabilirim?</h3>
+ <p>Sık uyanmanın birçok nedeni olabilir: uyku apnesi, stres, sıcak yatak odası, alkol, mesane sorunları. Oda sıcaklığını kontrol edin (16-19 derece), yatmadan 2 saat önce sıvı alımını azaltın, alkol tüketimini sınırlayın. Sorun 2 haftadan uzun sürerse doktora başvurun.</p>
+
  <div class="sources">
  <h4> Kaynaklar ve Referanslar</h4>
  <ol>
