--- a/pages/araclar.html
+++ b/pages/araclar.html
@@ -450,6 +450,8 @@
  </header>
 
  <section class="page-hero">
+ <img src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1d?w=1400&q=80" alt="Sağlık araçları" class="page-hero-bg">
+ <div class="page-hero-overlay"></div>
  <div class="page-hero-content">
  <nav class="hero-breadcrumb">
  <a href="../index.html">Ana Sayfa</a>
@@ -470,6 +472,7 @@
  </nav>
 
  <!-- BMI Calculator -->
+ <div id="bmi"></div>
  <section class="calculator-section active" id="bmi-section">
  <div class="calculator-container">
  <h2 class="calc-title">Vücut Kitle İndeksi (BMI) Hesaplayıcı</h2>
@@ -534,6 +537,7 @@
  </section>
 
  <!-- Calorie Calculator -->
+ <div id="kalori"></div>
  <section class="calculator-section" id="calorie-section">
  <div class="calculator-container">
  <h2 class="calc-title">Günlük Kalori İhtiyacı Hesaplayıcı</h2>
@@ -641,6 +645,7 @@
  </section>
 
  <!-- Waist-Hip Ratio Calculator -->
+ <div id="bel-boy"></div>
  <section class="calculator-section" id="whr-section">
  <div class="calculator-container">
  <h2 class="calc-title">Bel-Kalça Oranı Hesaplayıcı</h2>
