--- a/pages/tedavi/karsilastirma.html
+++ b/pages/tedavi/karsilastirma.html
@@ -59,7 +59,7 @@
 
  /* Hero */
  .compare-hero {
- background: linear-gradient(135deg, var(--dark-teal) 0%, var(--teal) 50%, #0a9396 100%);
+ background: linear-gradient(135deg, rgba(13,115,119,0.85), rgba(25,81,87,0.9)), url('https://images.unsplash.com/photo-1551076805-e1869033e561?w=1400&q=80') center/cover;
  color: white;
  padding: 5rem 2rem 3rem;
  text-align: center;
