--- a/pages/beslenme/kalori-hesaplayici.html
+++ b/pages/beslenme/kalori-hesaplayici.html
@@ -34,7 +34,8 @@
  <link rel="stylesheet" href="../../styles/main.css">
  <link rel="stylesheet" href="../../styles/content-page.css">
  <style>
- .guide-hero { position: relative; padding: 8rem 2rem 4rem; color: white; }
+ .guide-hero { position: relative; padding: 8rem 2rem 4rem; color: white; overflow: hidden; }
+ .guide-hero-bg { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; }
  .guide-hero-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, rgba(25,81,87,0.9), rgba(42,107,115,0.85)); }
  .guide-hero-content { position: relative; z-index: 2; max-width: 800px; margin: 0 auto; }
  .guide-badge { display: inline-block; background: var(--accent); padding: 0.5rem 1rem; border-radius: 25px; font-size: 0.85rem; font-weight: 600; margin-bottom: 1rem; }
@@ -99,6 +100,7 @@
  </header>
 
  <section class="guide-hero" role="banner">
+ <img src="https://images.unsplash.com/photo-1490645935967-10de6ba17061?w=1400&q=80" alt="Sağlıklı beslenme" class="guide-hero-bg">
  <div class="guide-hero-overlay"></div>
  <div class="guide-hero-content">
  <span class="guide-badge"> Araç</span>
